<resources>
    <string name="app_name">AttendanceProject</string>
    <string name="developer">Claire Chemutai</string>
    <!--<string name="website">None yet</string>-->
    <string name="menu_item_import">Import</string>
    <string name="menu_item_gallery">Gallery</string>
    <string name="menu_item_slideshow">Slideshow</string>
    <string name="menu_item_tools">Tools</string>
    <string name="menu_group_communicate">Communicate</string>
    <string name="menu_item_share">Share</string>
    <string name="menu_item_send">Send</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="custom_theme">Custom Theme</string>

    <string name="mark_attendance">Mark Attendance</string>
    <string name="view_attendance">View Attendance</string>
    <string name="view_report">View Report</string>
    <string name="log_out">Log Out</string>
    <string name="add_course">Register Course</string>
    <string name="add_student">Register Student</string>
    <string name="female">Female</string>
    <string name="male">Male</string>

    <string name="github">GitHub</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="bitbucket">Bitbucket</string>
    <string name="google">Google</string>
    <string name="google_plus">Google +</string>
    <string name="google_play_store">Play Store</string>
    <string name="google_play_games">Play Games</string>
    <string name="linkedin">LinkedIn</string>
    <string name="whastapp">Whatsapp</string>
    <string name="skype">Skype</string>
    <string name="youtube">Youtube</string>
    <string name="android">Android</string>
    <string name="dribbble">Dribbble</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="version">Version %s</string>
    <string name="error">Error</string>

    <string name="rate_five_stars">Rate this app 5 stars</string>
    <string name="more_apps">More apps from me</string>
    <string name="share_app">Share this app</string>
    <string name="update_app">Update this app</string>
    <string name="feedback_app">Give me a feedback</string>
    <string name="introduce_app">Introduce the app</string>
    <string name="changelog">ChangeLog</string>
    <string name="license">License</string>
    <string name="remove_ads">Remove ads</string>
    <string name="donate">Donate</string>
    <string name="help">Help</string>
    <string name="privacy">Privacy Policy</string>

    //Firebase
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="signed_out">Signed Out</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="loading">Loading…</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>

    <string name="Absent">Absent</string>
    <string name="Present">Present</string>
    <string name="StudentName">StudentName</string>
    <string name="nurse_appointment">NURSE APPOINTMENT</string>
    <string name="student_id">Student ID</string>
    <string name="student_name">Student Name</string>
    <string name="report">Report</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>


</resources>
