<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/layout_background"

    android:columnCount="3">

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->


    <!--<TextView-->
        <!--android:id="@+id/studentid"-->
        <!--android:layout_width="96dp"-->
        <!--android:layout_height="36dp"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:paddingTop="10dp"-->
        <!--android:text="StudentId"-->
        <!--app:layout_constraintEnd_toStartOf="@+id/studentname"-->
        <!--app:layout_constraintHorizontal_bias="0.115"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->


    <TextView
        android:id="@+id/studentname"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingTop="10dp"
        android:text="@string/StudentName"
        app:layout_constraintEnd_toStartOf="@+id/toggleButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:onClick="addFingerprint"
        android:textOff="@string/Absent"
        android:textOn="@string/Present"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/studentname"
        app:layout_constraintTop_toTopOf="parent" />
    <!--</LinearLayout>-->



</android.support.constraint.ConstraintLayout>